# roby-le-gentil-robot

./: .gitignore  README.md  hot_reload_urdf.py  launch_sim.sh
demo/: demo_orchestrator.py  demo_prep.py  gripper_node.py  head_lock_node.py  roby_3_demo.sh
deploy/pi5/: README.md  cyclone_config.xml
motion_scripts/: roby_fine_jog.py  roby_fine_jog.sh  roby_moveit_seq.py  roby_moveit_seq.sh  roby_poses.yaml  roby_tool_pickup.py
src/neuroneimitationcarote_description/: CMakeLists.txt  package.xml
src/neuroneimitationcarote_description/launch/: view_robot.launch.py
src/neuroneimitationcarote_description/meshes/visual/: section1_maillage.stl  section2_maillage.stl  section3_maillage.stl  section4_maillage.stl  section5_maillage.stl
src/neuroneimitationcarote_description/urdf/: robot.urdf.xacro
src/neuroneimitationcarote_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/neuroneimitationcarote_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  neuroneimitationcarote.ros2_control.xacro  neuroneimitationcarote.srdf  neuroneimitationcarote.urdf.xacro  ros2_controllers.yaml  viewer.rviz
src/neuroneimitationcarote_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_only.launch.py  moveit_rviz.launch.py  pc_moveit.launch.py  rsp.launch.py  rviz_only.launch.py  rviz_viewer.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/neuroneimitationcarote_moveit_config/scripts/: loop_trajectory.py
src/roby_control/: package.xml  setup.cfg  setup.py
src/roby_control/config/: cube_faces.yaml  roby_servo.yaml
src/roby_control/launch/: servo_sim.launch.py
src/roby_control/resource/: roby_control
src/roby_control/roby_control/: aruco_calibrate.py  aruco_node.py  visual_servo_node.py
src/roby_control/roby_control/bringup/: bringup.py  checks.py  diagnostic.py  repair.py  sense.py  stack_spec.py
src/roby_control/roby_control/skills/: actions.py  conditions.py  motion.py  motion_actions.py  positions.py  runner.py  trees.py  world.py
src/roby_environments/: package.xml  setup.cfg  setup.py
src/roby_environments/environments/: atelier_actuel.yaml
src/roby_environments/roby_environments/: scene_loader.py
src/roby_hardware/: CMakeLists.txt  package.xml  roby_hardware_plugin.xml
src/roby_hardware/config/: encoder_calibration.yaml  initial_positions.yaml  roby_controllers.yaml  roby_hardware.ros2_control.xacro  roby_hardware_motor1_only.ros2_control.xacro  roby_hardware_steppers_only.ros2_control.xacro  roby_motor1_test.urdf.xacro
src/roby_hardware/include/roby_hardware/: encoder_driver.hpp  outlier_filter.hpp  pid.hpp  roby_system.hpp  safety_monitor.hpp  servo_driver.hpp  stepper_driver.hpp
src/roby_hardware/launch/: motor1_test.launch.py  robot_control.launch.py  robot_full.launch.py  roby_hardware.launch.py  steppers_test.launch.py
src/roby_hardware/scripts/: encoder_publisher.py  jmon.py  test_gpio_motor1.py  test_stepper_motor1.py  trajectory_relay.py  validate_encoders.py
src/roby_hardware/src/: encoder_driver.cpp  roby_system.cpp  safety_monitor.cpp  servo_driver.cpp  stepper_driver.cpp  stepper_driver.hpp
src/roby_hardware/test/: test_encoder_driver_hw.cpp  test_outlier_filter.cpp  test_pid.cpp  test_safety_monitor.cpp  test_servo_driver.cpp  test_simulation.py  test_stepper_driver.cpp  test_stepper_hw.cpp  test_stepper_integration.py
tools/: README.md
tools/pc/: bag_video_server.py  calib_capture.py  capture_to_poses.py  roby_3_demo.sh  roby_cam_view.py  roby_cam_view.sh  roby_collect_panel.py  roby_collect_panel.sh  roby_dataset_to_cartesian.py  roby_env.sh  roby_eval_offline.py  roby_fine_jog.py  roby_goto.py  roby_goto_joints.py  roby_goto_start.py  roby_gripper.py  roby_gripper_jog.py  roby_gripper_jog.sh  roby_gripper_monitor.py  roby_gripper_monitor.sh  roby_guard.py  roby_guard.sh  roby_infer.py  roby_infer.sh  roby_infer_bag.py  roby_infer_cart.py  roby_infer_cart.sh  roby_moveit_seq.py  roby_oracle.py  roby_oracle_infer.py  roby_oracle_real.sh  roby_ov.py  roby_poses.yaml  roby_recorder.py  roby_replay.py  roby_replay_cartesian.py  roby_show_D.py  roby_sortie_nid.py  roby_sortie_nid.sh  roby_sortie_nid.yaml  (+8 more)
tools/pc/attic/: README.md  roby_1_init.sh  roby_2_prep.sh
tools/pi5/: axe4_zero.py  cam_capture.py  cam_pub.py  cam_pub_pi2.py  cam_pub_pi2_dual.py  cam_switch.py  capture_pose.py  demo_orchestrator.py  demo_poses.yaml  encoder_publisher.py  encoder_to_joints.py  fix_ax1_accel.py  gripper_node.py  gripper_servo.py  head_lock_node.py  launch_cams.sh  launch_cams_pi2.sh  lock_servo.py  lock_test.py  move_group_fast.launch.py  rs485_master.py  snapshot_zeros.py  solo_wrist.sh  test_100.py  trajectory_test.py  trajectory_test_j3.py  ventouse_test.py
tools/pi5/attic/: README.md  multi_test.py  pi5_timeecho.py  trajectory_test_j1.py
